Bug 447315 - Breeze Qt theme has excess padding on vertical Qt tabs
Summary: Breeze Qt theme has excess padding on vertical Qt tabs
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-21 06:04 UTC by Adam Honse
Modified: 2022-02-28 16:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Honse 2021-12-21 06:04:55 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  Use an application with vertical tabs
2.  Look at the tabs
3.  Compare against what they look like on other Qt themes

OBSERVED RESULT

https://gitlab.com/CalcProgrammer1/OpenRGB/uploads/418916aedc48ad1964dd6dad786ba267/image.png

EXPECTED RESULT

https://gitlab.com/CalcProgrammer1/OpenRGB/uploads/b96854a0034fdbdb8e9646b9a5bdff1d/image.png

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Manjaro
(available in About System)
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

On Windows, MacOS, and GNOME the tab label is centered vertically.  On certain KDE themes (Breeze, Oxygen) there is a large gap above the label.

Related OpenRGB Issue: https://gitlab.com/CalcProgrammer1/OpenRGB/-/issues/2032
Comment 1 Bug Janitor Service 2022-02-25 17:45:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/191
Comment 2 Nate Graham 2022-02-28 16:25:53 UTC
Git commit 0576ca06a5bb69da8e1c38f7ba1f98fcf8cc907e by Nate Graham, on behalf of Janet Blackquill.
Committed on 28/02/2022 at 16:25.
Pushed by ngraham into branch 'master'.

KStyle: center QTabBar custom tab buttons vertically in vertical tabs
FIXED-IN: 5.24.3

M  +2    -2    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/0576ca06a5bb69da8e1c38f7ba1f98fcf8cc907e
Comment 3 Nate Graham 2022-02-28 16:26:47 UTC
Git commit 8a6426dfc9640367dc25454b8f26edd3bdac67c5 by Nate Graham, on behalf of Janet Blackquill.
Committed on 28/02/2022 at 16:26.
Pushed by ngraham into branch 'Plasma/5.24'.

KStyle: center QTabBar custom tab buttons vertically in vertical tabs
FIXED-IN: 5.24.3


(cherry picked from commit 0576ca06a5bb69da8e1c38f7ba1f98fcf8cc907e)

M  +2    -2    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/8a6426dfc9640367dc25454b8f26edd3bdac67c5