KStyle: center QTabBar custom tab buttons vertically in vertical tabs

BUG: 447315
FIXED-IN: 5.24.3


(cherry picked from commit 0576ca06a5bb69da8e1c38f7ba1f98fcf8cc907e)